--- a/contact.css
+++ b/contact.css
@@ -1,8 +1,13 @@
+*{
+    margin: 0;
+    padding: 0;
+  
+}
+
 
 body {
     background: white;
-height: 100%;
-    width: 100%;
+    height: 100%;
     display: flex;
     padding: 1rem;
     flex-direction: column;
@@ -180,6 +185,38 @@ p {
     line-height: 20px;
     letter-spacing: 0.5px;
     margin: 15px 0 20px;
+}
+
+.inputContainer{
+position: relative;
+margin: 20px 0;
+
+}
+
+.inputContainer label{
+position: absolute;
+top: 50%;
+left: 1.5rem;
+transform: translateY(-50%);
+font-size: 1rem;
+padding: 0 5px;
+pointer-events: none;
+transition: 0.5s;
+}
+
+.inputContainer input{
+    background: transparent;
+    color: #333;
+    height: 40px;
+    font-size: 1rem;
+    border: 1.2px solid black;
+}
+
+.inputContainer input:focus~label,
+.inputContainer input:valid~label{
+    top: 8px;
+    font-size: 0.7rem;
+    background-color: white;
 }
 
 input {
