--- a/contact.css
+++ b/contact.css
@@ -118,8 +118,10 @@ main * {
 
 .flexMainContainer{
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
+    gap: 1.5rem;
 }
 
 .formContainer {
@@ -129,8 +131,9 @@ main * {
     background: white;
     border-radius: 10px;
     overflow: hidden;
-    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25),
-        0 10px 10px rgba(0, 0, 0, 0.22);
+    box-shadow: -40px -5px 57px -45px rgba(0,0,0,1);
+    -webkit-box-shadow: -40px -5px 57px -45px rgba(0,0,0,1);
+    -moz-box-shadow: -40px -5px 57px -45px rgba(0,0,0,1);
 }
 
 .contactForm,
@@ -209,6 +212,7 @@ transition: 0.5s;
     color: #333;
     height: 40px;
     font-size: 1rem;
+    width: 100%;
     border: 1.2px solid black;
 }
 
@@ -333,4 +337,58 @@ button:active {
 
 .formContainer.rightPanelActive .overlayRight {
     transform: translateX(20%);
+}
+
+@keyframes slider {
+    form{
+        transform: translateX(0);
+    }
+
+    to{
+        transform: translateX(-100%);
+    }
+}
+
+.logos{
+    position: relative;
+    padding: 2rem 0;
+    white-space: nowrap;
+    max-width: 80%;
+    overflow-x: hidden;
+}
+
+.logos::before{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 15%;
+    background:linear-gradient(to right, white, transparent);
+    z-index: 100;
+}
+
+.logos::after{
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    height: 100%;
+    width: 15%;
+    background:linear-gradient(to left, white, transparent);
+    z-index: 100;
+}
+
+.logos:hover .logosSlide{
+    animation-play-state: paused;
+}
+
+.logosSlide{
+   display: inline-block;
+    animation: 8s slider infinite linear;
+}
+
+.logosSlide img{
+    height: 5rem;
+    margin: 0 2rem;
 }
