--- a/contact.css
+++ b/contact.css
@@ -12,7 +12,6 @@ body {
     padding: 1rem;
     flex-direction: column;
     box-sizing: border-box;
-
 }
 
 header {
@@ -383,6 +382,11 @@ button:active {
     animation-play-state: paused;
 }
 
+.logosSlide img:hover{
+    transform: scale(1.4);
+    cursor: pointer;
+}
+
 .logosSlide{
    display: inline-block;
     animation: 8s slider infinite linear;
@@ -391,4 +395,101 @@ button:active {
 .logosSlide img{
     height: 5rem;
     margin: 0 2rem;
+    transition: 0.4s;
+}
+
+.container p{
+    width: 100%;
+    white-space: nowrap;
+    overflow: hidden;
+    animation: typing 2s,
+    cursor .4s step-end infinite alternate;
+    font-size: 20px;
+}
+
+@keyframes cursor{
+    50% {border-color: transparent;}
+}
+
+@keyframes typing{
+    form {width: 0;}
+}
+
+footer{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 5rem;
+}
+
+hr{
+    border: none;
+    border-top: 1px solid rgb(174, 171, 157);
+}
+
+.footerContainer{
+    display: flex;
+    gap: 5rem;
+    width: 100%;
+    margin-bottom: 3rem;
+    justify-content: space-around;
+}
+
+.footerContainer section{
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+}
+
+.sectionElements{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.sectionTitle{
+    font-size: 1.2rem;
+    font-weight: 700;
+}
+
+
+.newsletterForm{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.newsletterForm input{
+    height:2.5rem ;
+    margin: 0;
+    padding-right: 0;
+    width: 16rem;
+    box-sizing: border-box;
+}
+
+.newsletterForm label{
+    left: 5px;
+}
+
+.newsletterForm input:focus~label,
+.newsletterForm input:valid~label{
+top: 0;
+}
+
+#newsletterSubscribeBtn{
+    width: 100%;
+    margin: 0;
+    font-size: 0.6rem;
+    font-weight: 900;
+}
+
+.footerSections{
+    display: flex;
+    gap: 3rem;
+}
+
+.newsletterFormTitle{
+    font-size: 1.3rem;
+    font-weight: 700;
 }
