Adding company contact details on center form

--- a/style.css
+++ b/style.css
@@ -218,4 +218,8 @@ p strong {
     text-decoration: underline;
 }
 
+#sneakersImg, #yogaMatImg, #boxingGloves {
+    max-width: 100%; 
+    height: auto; 
+}
 
