--- a/contact.css
+++ b/contact.css
@@ -1,7 +1,7 @@
-*{
+* {
     margin: 0;
     padding: 0;
-  
+
 }
 
 
@@ -115,7 +115,7 @@ main * {
     box-sizing: border-box;
 }
 
-.flexMainContainer{
+.flexMainContainer {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -126,13 +126,13 @@ main * {
 .formContainer {
     position: relative;
     width: 80%;
-    min-height: 600px;
+    min-height: 40rem;
     background: white;
     border-radius: 10px;
     overflow: hidden;
-    box-shadow: -40px -5px 57px -45px rgba(0,0,0,1);
-    -webkit-box-shadow: -40px -5px 57px -45px rgba(0,0,0,1);
-    -moz-box-shadow: -40px -5px 57px -45px rgba(0,0,0,1);
+    box-shadow: -40px -5px 57px -45px rgba(0, 0, 0, 1);
+    -webkit-box-shadow: -40px -5px 57px -45px rgba(0, 0, 0, 1);
+    -moz-box-shadow: -40px -5px 57px -45px rgba(0, 0, 0, 1);
 }
 
 .contactForm,
@@ -156,13 +156,13 @@ main * {
     z-index: 2;
 }
 
-.socialMediaContainer i{
-font-size: 1.8rem;
+.socialMediaContainer i {
+    font-size: 1.4rem;
 }
 
-.socialMediaContainer{
-display: flex;
-gap: 1rem;
+.socialMediaContainer {
+    display: flex;
+    gap: 1rem;
 }
 
 form {
@@ -189,24 +189,24 @@ p {
     margin: 15px 0 20px;
 }
 
-.inputContainer{
-position: relative;
-margin: 20px 0;
-
+.inputContainer {
+    position: relative;
+    margin: 20px 0;
+    width: 50%;
 }
 
-.inputContainer label{
-position: absolute;
-top: 50%;
-left: 1.5rem;
-transform: translateY(-50%);
-font-size: 1rem;
-padding: 0 5px;
-pointer-events: none;
-transition: 0.5s;
+.inputContainer label {
+    position: absolute;
+    top: 50%;
+    left: 1.5rem;
+    transform: translateY(-50%);
+    font-size: 1rem;
+    padding: 0 5px;
+    pointer-events: none;
+    transition: 0.5s;
 }
 
-.inputContainer input{
+.inputContainer input {
     background: transparent;
     color: #333;
     height: 40px;
@@ -216,7 +216,7 @@ transition: 0.5s;
 }
 
 .inputContainer input:focus~label,
-.inputContainer input:valid~label{
+.inputContainer input:valid~label {
     top: 8px;
     font-size: 0.7rem;
     background-color: white;
@@ -241,7 +241,7 @@ a {
 
 button {
     color: white;
-    background:rgb(32, 32, 32);
+    background: rgb(32, 32, 32);
     font-size: 12px;
     font-weight: bold;
     padding: 12px 55px;
@@ -339,16 +339,16 @@ button:active {
 }
 
 @keyframes slider {
-    form{
+    form {
         transform: translateX(0);
     }
 
-    to{
+    to {
         transform: translateX(-100%);
     }
 }
 
-.logos{
+.logos {
     position: relative;
     padding: 2rem 0;
     white-space: nowrap;
@@ -356,66 +356,70 @@ button:active {
     overflow-x: hidden;
 }
 
-.logos::before{
+.logos::before {
     content: "";
     position: absolute;
     top: 0;
     left: 0;
     height: 100%;
     width: 15%;
-    background:linear-gradient(to right, white, transparent);
+    background: linear-gradient(to right, white, transparent);
     z-index: 100;
 }
 
-.logos::after{
+.logos::after {
     content: "";
     position: absolute;
     top: 0;
     right: 0;
     height: 100%;
     width: 15%;
-    background:linear-gradient(to left, white, transparent);
+    background: linear-gradient(to left, white, transparent);
     z-index: 100;
 }
 
-.logos:hover .logosSlide{
+.logos:hover .logosSlide {
     animation-play-state: paused;
 }
 
-.logosSlide img:hover{
+.logosSlide img:hover {
     transform: scale(1.4);
     cursor: pointer;
 }
 
-.logosSlide{
-   display: inline-block;
+.logosSlide {
+    display: inline-block;
     animation: 8s slider infinite linear;
 }
 
-.logosSlide img{
+.logosSlide img {
     height: 5rem;
     margin: 0 2rem;
     transition: 0.4s;
 }
 
-.container p{
+.container p {
     width: 100%;
     white-space: nowrap;
     overflow: hidden;
     animation: typing 2s,
-    cursor .4s step-end infinite alternate;
+        cursor .4s step-end infinite alternate;
     font-size: 20px;
 }
 
-@keyframes cursor{
-    50% {border-color: transparent;}
+@keyframes cursor {
+    50% {
+        border-color: transparent;
+    }
 }
 
-@keyframes typing{
-    form {width: 0;}
+@keyframes typing {
+    form {
+        width: 0;
+    }
 }
 
-footer{
+footer {
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -423,12 +427,12 @@ footer{
     gap: 5rem;
 }
 
-hr{
+hr {
     border: none;
     border-top: 1px solid rgb(174, 171, 157);
 }
 
-.footerContainer{
+.footerContainer {
     display: flex;
     gap: 5rem;
     width: 100%;
@@ -436,60 +440,104 @@ hr{
     justify-content: space-around;
 }
 
-.footerContainer section{
+.footerContainer section {
     display: flex;
     flex-direction: column;
     gap: 1.5rem;
 }
 
-.sectionElements{
+.sectionElements {
     display: flex;
     flex-direction: column;
     gap: 1rem;
 }
 
-.sectionTitle{
+.sectionTitle {
     font-size: 1.2rem;
     font-weight: 700;
 }
 
 
-.newsletterForm{
+.newsletterForm {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.newsletterForm input{
-    height:2.5rem ;
+.newsletterForm input {
+    height: 2.5rem;
     margin: 0;
     padding-right: 0;
     width: 16rem;
     box-sizing: border-box;
 }
 
-.newsletterForm label{
+.newsletterForm label {
     left: 5px;
 }
 
 .newsletterForm input:focus~label,
-.newsletterForm input:valid~label{
-top: 0;
+.newsletterForm input:valid~label {
+    top: 0;
 }
 
-#newsletterSubscribeBtn{
+#newsletterSubscribeBtn {
     width: 100%;
     margin: 0;
     font-size: 0.6rem;
     font-weight: 900;
 }
 
-.footerSections{
+.footerSections {
     display: flex;
     gap: 3rem;
 }
 
-.newsletterFormTitle{
+.newsletterFormTitle {
     font-size: 1.3rem;
     font-weight: 700;
+}
+
+.detailsContainer{
+        width: 100%;
+    justify-content: flex-start;
+}
+
+.emailContactContainer,
+.adressContainer,
+.phoneContainer {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    text-align: left;
+}
+
+iframe{
+    width: 100%;
+    height: 100%;
+}
+
+.iframeContainer{
+    width: 100%;
+    height: 40%;
+}
+
+.detailsContainer hr{
+    width: 100%;
+}
+
+@media screen and (min-width:1500px) {
+    html{
+    
+    }
+}
+
+
+@media screen and (max-width:750px) {
+    html{
+
+    }
+
+    *{
+    }
 }
