modifing aboutUs.css

--- a/aboutUs.css
+++ b/aboutUs.css
@@ -3,6 +3,7 @@
     padding: 0;
     caret-color: transparent;
     box-sizing: border-box;
+    
 }
 
 
@@ -96,11 +97,12 @@ h2 span {
 
 .titleAnimationContainer {
     display: flex;
-    align-items: center;
-    justify-content: flex-start;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
     gap: 1rem;
     height: 25rem;
-    background: black;
+    background: white;
     overflow: hidden;
     padding-left: 1rem;
     width: 100%;
@@ -114,7 +116,7 @@ h2 span {
 }
 
 .titleAnimationContainer .mainTitle.firstTitlePart {
-    color: white;
+    color: black;
 }
 
 .firstTitlePart{
@@ -132,7 +134,7 @@ h2 span {
     left: 0;
     height: 100%;
     width: 100%;
-    background-color:black;
+    background-color:white;
     border-left: 2px solid rgba(114, 102, 97, 1);
     animation: animate 5s infinite;
 }   
@@ -142,41 +144,22 @@ h2 span {
     text-align: center;
     justify-content: center;
     gap: 10%;
-    margin-top: 2rem;
-}
+    margin: 2rem 0;
+    box-shadow: 0rem 0rem 0rem 0rem rgba(0, 0, 0, 1);
+   }
 
-.leftStory{
+
+.leftStory,
+.rightStory {
     max-width: 40%;
+    background: transparent;
+    box-shadow: 2px 4px 6px rgba(0, 0, 0, 0.2);
+    box-shadow: -2.5rem -0.313rem 3.563rem -2.813rem rgba(0, 0, 0, 1);
+    border: 2.5px solid rgb(129, 126, 112);
+    border-radius: 17px;
 }
 
-.rightStory{
-    max-width: 40%;
-}
-
-.leftStory h3{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 10rem;
-    font-size: 2rem;
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
-    background: radial-gradient(circle, rgba(178, 175, 160, 1) 0%, rgba(154, 148, 137, 1) 56%, rgba(142, 134, 125, 1) 74%, rgba(114, 102, 97, 1) 100%);
-}
-
-.leftStory p{
-  background-color: black;
-  color: white;
-  border-bottom-left-radius: 20px;
-  border-bottom-right-radius: 20px;
-  margin: 0;
-  box-sizing: border-box;
-  padding: 1rem;
-  margin-bottom: 2rem;
-    font-size: 1.2rem;
-    line-height: 1.4rem;
-}
-
+.leftStory h3,
 .rightStory h3{
     display: flex;
     align-items: center;
@@ -185,23 +168,27 @@ h2 span {
     font-size: 2rem;
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
-    background: radial-gradient(circle, rgba(178, 175, 160, 1) 0%, rgba(154, 148, 137, 1) 56%, rgba(142, 134, 125, 1) 74%, rgba(114, 102, 97, 1) 100%);
-    box-sizing: border-box;
-    padding: 1rem;
+    background:white;
 }
 
-.rightStory p{
-  background-color: black;
-  color: white;
+.leftStory p,
+.rightStory p
+{
+  background-color: white;
+  color: rgb(129, 126, 112);
   border-bottom-left-radius: 20px;
   border-bottom-right-radius: 20px;
   margin: 0;
   box-sizing: border-box;
   padding: 1rem;
-  margin-bottom: 2rem;
-  font-size: 1.2rem;
-  line-height: 1.4rem;
+  box-shadow: 0rem 0rem 0rem 0rem rgba(0, 0, 0, 1);
+    font-size: 1.2rem;
+    line-height: 1.4rem;
 }
+
+
+
+
 
 footer {
     width: 100%;
@@ -270,6 +257,12 @@ hr {
     margin: 0;
     font-size: 0.6rem;
     font-weight: 900;
+}
+
+main *{
+    box-shadow: -2.5rem -0.313rem 3.563rem -2.813rem rgba(0, 0, 0, 1);
+    -webkit-box-shadow: -2.5rem -0.313rem 3.563rem -2.813rem rgba(0, 0, 0, 1);
+    -moz-box-shadow: -2.5rem -0.313rem 3.563rem -2.813rem rgba(0, 0, 0, 1);
 }
 
 .footerSections {
