--- a/aboutUs.css
+++ b/aboutUs.css
@@ -106,7 +106,7 @@ h2 span {
     overflow: hidden;
     padding-left: 1rem;
     width: 100%;
-    border: 2.5px solid rgb(129, 126, 112);
+    /* border: 2.5px solid rgb(129, 126, 112); */
     border-radius: 17px;
 }
 
@@ -156,7 +156,7 @@ h2 span {
     background: transparent;
     box-shadow: 2px 4px 6px rgba(0, 0, 0, 0.2);
     box-shadow: -2.5rem -0.313rem 3.563rem -2.813rem rgba(0, 0, 0, 1);
-    border: 2.5px solid rgb(129, 126, 112);
+    /* border: 2.5px solid rgb(129, 126, 112); */
     border-radius: 17px;
 }
 
