--- a/contact.css
+++ b/contact.css
@@ -1,7 +1,14 @@
+.bebas-neue-regular {
+    font-family: "Bebas Neue", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+  }
+
 * {
     margin: 0;
     padding: 0;
     caret-color: transparent;
+    font-family: "Bebas Neue";
 }
 
 
@@ -574,4 +581,6 @@ iframe {
     html {
         font-size: 45px;
     }
+
+   
 }
