--- a/contact.css
+++ b/contact.css
@@ -475,7 +475,7 @@ hr {
     height: 2.5rem;
     margin: 0;
     padding-right: 0;
-    width: 16rem;
+    width: 10rem;
     box-sizing: border-box;
 }
 
@@ -533,9 +533,30 @@ iframe {
     width: 100%;
 }
 
-@media screen and (min-width:1500px) {
+@media screen and (min-width:1100px) {
     html {
         font-size: 25px;
+    }
+    .newsletterForm{
+        padding: 0 0.5rem;
+    }
+
+    .newsletterForm input{
+        
+    }
+
+
+    .formContainer{
+        width: 100%;
+    }
+
+    #newsLetterEmail{
+        width: auto;
+    }
+
+
+    #newsletterSubscribeBtn{
+        font-size: 0.5rem;
     }
 }
 
