--- a/style.css
+++ b/style.css
@@ -230,3 +230,9 @@ p strong {
         transform: translateX(-50%);
     }
 }
+
+@media screen and (max-width: 500px) {
+    html {
+        font-size: 10px;
+    }
+}
