--- a/style.css
+++ b/style.css
@@ -220,9 +220,9 @@ p strong {
     height: 11rem;
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 900px) {
     html {
-        font-size: 12px;
+        font-size: 11px;
     }
 
     #sideHeading {
@@ -230,6 +230,17 @@ p strong {
         transform: translateX(-50%);
     }
 }
+
+@media screen and (max-height: 400px) {
+    html {
+        font-size: 11px;
+    }
+
+    #sideHeading {
+        left: 10%;
+    }
+}
+
 
 @media screen and (max-width: 500px) {
     html {
